--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "ipykernel>=7.1.0",
     "pip>=25.3",
     "pydantic-ai>=1.25.1",
+    "python-dotenv>=1.2.1",
     "requests>=2.31.0",
 ]
