--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=7.1.0",
+    "nest-asyncio>=1.6.0",
     "pip>=25.3",
     "pydantic-ai>=1.25.1",
     "python-dotenv>=1.2.1",
