--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "requests>=2.31.0",
     "textual>=0.47.0",
+    "textual-dev>=1.8.0",
+    "textual-serve>=1.1.3",
 ]
 
 [project.optional-dependencies]
